--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -8,14 +8,9 @@ on:
       - 'dev-*' # for dev deployment tag
 
 
-env:
-  AWS_ECR: 267583709295.dkr.ecr.ap-southeast-1.amazonaws.com/frontend
-  AWS_REGION: ap-southeast-1
-  ROLE_TO_ASSUME: arn:aws:iam::267583709295:role/github-oidc-role
-
 jobs:
   build_and_push:
     uses: thienchuong/reusable-workflows/.github/workflows/build-push.yaml@main
     with:
-      aws-ecr: ${{ env.AWS_ECR }}
-      role-to-assume: ${{ env.ROLE_TO_ASSUME }}
+      aws-ecr: 267583709295.dkr.ecr.ap-southeast-1.amazonaws.com/frontend
+      role-to-assume: arn:aws:iam::267583709295:role/github-oidc-role
