--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -12,5 +12,5 @@ jobs:
   build_and_push:
     uses: thienchuong/reusable-workflows/.github/workflows/build-push.yaml@main
     with:
-      aws-ecr: 267583709295.dkr.ecr.ap-southeast-1.amazonaws.com/frontend
+      aws-ecr: 267583709295.dkr.ecr.ap-southeast-1.amazonaws.com
       role-to-assume: arn:aws:iam::267583709295:role/github-oidc-role
