--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_PORT=1000
-REACT_APP_SERVER_URL=http://backendddd
+REACT_APP_SERVER_PORT=3001
+REACT_APP_SERVER_URL=http://localhost
